fix: alignment general

--- a/src/components/Button/Button.module.sass
+++ b/src/components/Button/Button.module.sass
@@ -15,6 +15,7 @@
 	font-weight: var(--font-weight-l)
 	font-size: var(--font-size-m)
 	color: var(--color-primary)
+	text-align: center
 
 .info
 	background: var(--color-blue-base)
