--- a/src/style/base.global.sass
+++ b/src/style/base.global.sass
@@ -13,6 +13,7 @@
 *[dir="rtl"]
 	--font-family: var(--font-family-rtl)
 	font-family: var(--font-family-rtl)
+	text-align: right
 
 	*
 		direction: rtl
